# DCA0445-PROCESSAMENTO-DIGITAL-DE-IMAGENS

./: .gitignore  README.md
discrete_fourier_transform/: README.md
discrete_fourier_transform/C++/: CMakeLists.txt  dft.cpp  homomorphicFilter.cpp
discrete_fourier_transform/Python/: dft.py  homomorphic_filter.py
histogram/: README.md
histogram/C++/: .gitignore  CMakeLists.txt  equalize.cpp  motionDetector.cpp
histogram/C++/nbproject/: configurations.xml  project.xml
histogram/C++/nbproject/private/: Default.properties  configurations.xml  private.xml
histogram/Python/: equalize.py  motion_detector.py
kmeans/: README.md
kmeans/C++/: CMakeLists.txt  kmeans.cpp  kmeansTest.cpp
labeling/: README.md
labeling/C++/: CMakeLists.txt  labeling.cpp
labeling/Python/: labeling.py
pointillism/: README.md
pointillism/C++/: CMakeLists.txt  canny.cpp  cannypoints.cpp  pointillism.cpp
regions/: README.md
regions/C++/regions/: CMakeLists.txt  regions.cpp
regions/C++/regions/nbproject/: configurations.xml  project.xml
regions/C++/regions/nbproject/private/: Default.properties  configurations.xml  private.xml
regions/C++/swap_regions/: CMakeLists.txt  swapRegions.cpp
regions/C++/swap_regions/nbproject/: configurations.xml  project.xml
regions/C++/swap_regions/nbproject/private/: Default.properties  configurations.xml  private.xml
regions/Python/: regions.py  swap_regions.py
spatialFilters/: README.md
spatialFilters/C++/: CMakeLists.txt  Menu.cpp  Menu.h  TiltShiftClass.cpp  TiltShiftClass.h  addweighted.cpp  laplgauss.cpp  tiltshift.cpp
spatialFilters/Python/: add_weighted.py  laplgauss.py  tilt_shift.py  tilt_shift_video.py
